--- a/composer.json
+++ b/composer.json
@@ -38,10 +38,11 @@
         "php": "^7.3 || ^8.0",
         "konsulting/project-root": "^1.1",
         "laravel/dusk": "^6.22.3",
-        "opis/closure": "^3.6",
         "laravel/serializable-closure": "^1.0",
+        "opis/closure": "^3.6",
         "orchestra/dusk-updater": "^1.7.1 || ^2.2.1",
         "orchestra/testbench": "^6.43",
+        "orchestra/testbench-core": "^6.50",
         "php-webdriver/webdriver": "^1.9"
     },
     "require-dev": {
