--- a/.gitattributes
+++ b/.gitattributes
@@ -5,6 +5,7 @@
 /bin export-ignore
 /docs export-ignore
 /tests export-ignore
+/workbench export-ignore
 /.gitattributes export-ignore
 /.gitignore export-ignore
 /phpunit.xml.dist export-ignore
