--- a/composer.json
+++ b/composer.json
@@ -43,7 +43,7 @@
         "laravel/serializable-closure": "^1.0",
         "orchestra/dusk-updater": "^2.4",
         "orchestra/testbench": "^9.1",
-        "orchestra/testbench-core": "^9.1",
+        "orchestra/testbench-core": ">=9.1.0 <9.2.0",
         "php-webdriver/webdriver": "^1.15.1",
         "symfony/polyfill-php83": "^1.28"
     },
