--- a/composer.json
+++ b/composer.json
@@ -48,6 +48,7 @@
         "symfony/polyfill-php83": "^1.28"
     },
     "require-dev": {
+        "laravel/framework": "^11.9.1",
         "laravel/pint": "^1.6",
         "laravel/tinker": "^2.9",
         "phpstan/phpstan": "^1.11",
