--- a/.github/workflows/strict-tests.yaml
+++ b/.github/workflows/strict-tests.yaml
@@ -59,7 +59,7 @@ jobs:
         run: php testbench-dusk package:create-sqlite-db
 
       - name: Start Chrome Driver
-        run: vendor/laravel/dusk/bin/chromedriver-linux &
+        run: vendor/laravel/dusk/bin/chromedriver-linux --port=9515 &
 
       - name: Execute tests
         run: vendor/bin/phpunit --fail-on-warning --fail-on-deprecation --fail-on-notice
