--- a/composer.json
+++ b/composer.json
@@ -64,6 +64,7 @@
             "@php vendor/bin/phpstan analyse --verbose"
         ],
         "test": [
+            "@php testbench-dusk view:clear",
             "@php drop-sqlite-db",
             "@php create-sqlite-db",
             "@php vendor/bin/phpunit -c ./ --color"
