--- a/.github/workflows/tests.yaml
+++ b/.github/workflows/tests.yaml
@@ -8,7 +8,7 @@ on:
     - cron: '0 0 * * *'
 
 jobs:
-  tests-on-phpunit-10:
+  tests:
     runs-on: ${{ matrix.os }}
     continue-on-error: ${{ matrix.experimental }}
     strategy:
@@ -18,6 +18,7 @@ jobs:
         php:
           - 8.2
           - 8.3
+          - 8.4
         phpunit:
           - "~11.0.0"
           - "~10.5.0"
