--- a/.github/workflows/strict-tests.yaml
+++ b/.github/workflows/strict-tests.yaml
@@ -61,7 +61,7 @@ jobs:
         run: vendor/laravel/dusk/bin/chromedriver-linux --port=9515 &
 
       - name: Execute tests
-        run: vendor/bin/phpunit --fail-on-warning --fail-on-deprecation --fail-on-notice
+        run: vendor/bin/phpunit --fail-on-warning --fail-on-deprecation --fail-on-notice --display-deprecations
         env:
           RAY_ENABLED: false
 
