--- a/.github/workflows/tests.yaml
+++ b/.github/workflows/tests.yaml
@@ -109,7 +109,7 @@ jobs:
       - name: Execute tests
         run: vendor/bin/phpunit
       - name: Upload Failed Screenshots
-        uses: actions/upload-artifact@v2-preview
+        uses: actions/upload-artifact@v4
         if: failure()
         with:
           name: screenshots
