--- a/.github/workflows/tests.yaml
+++ b/.github/workflows/tests.yaml
@@ -107,7 +107,7 @@ jobs:
         run: php ./create-sqlite-db
 
       - name: Start Chrome Driver
-        run: vendor/laravel/dusk/bin/chromedriver-linux &
+        run: vendor/laravel/dusk/bin/chromedriver-linux --port=9515 &
 
       - name: Execute tests
         run: vendor/bin/phpunit
