--- a/.github/workflows/tests.yaml
+++ b/.github/workflows/tests.yaml
@@ -47,14 +47,18 @@ jobs:
         with:
           dependency-versions: "${{ matrix.dependencies }}"
           composer-options: "--prefer-dist --no-cache"
+
       - name: Create database
         run: php ./create-sqlite-db
+
       - name: Start Chrome Driver
         run: vendor/laravel/dusk/bin/chromedriver-linux --port=9515 &
+
       - name: Execute tests
         run: vendor/bin/phpunit
+
       - name: Upload Failed Screenshots
-        uses: actions/upload-artifact@v2-preview
+        uses: actions/upload-artifact@v4
         if: failure()
         with:
           name: screenshots
