--- a/composer.json
+++ b/composer.json
@@ -76,8 +76,8 @@
             "@php vendor/bin/phpstan analyse --verbose"
         ],
         "test": [
-            "@php drop-sqlite-db",
-            "@php create-sqlite-db",
+            "@php ./testbench-dusk package:drop-sqlite-db",
+            "@php ./testbench-dusk package:create-sqlite-db",
             "@php vendor/bin/phpunit -c ./ --color"
         ],
         "ci": [
