--- a/composer.json
+++ b/composer.json
@@ -40,6 +40,7 @@
         "php": "^8.2",
         "composer-runtime-api": "^2.2",
         "laravel/dusk": "^8.1",
+        "laravel/framework": "^11.25",
         "laravel/serializable-closure": "^1.3",
         "orchestra/dusk-updater": "^2.6",
         "orchestra/testbench": "^9.5",
