--- a/composer.json
+++ b/composer.json
@@ -43,15 +43,15 @@
         "laravel/serializable-closure": "^1.3",
         "orchestra/dusk-updater": "^2.6",
         "orchestra/testbench": "^9.4",
-        "orchestra/testbench-core": ">=9.4.0 <9.5.0",
+        "orchestra/testbench-core": "dev-php84 as 9.5.999",
         "php-webdriver/webdriver": "^1.15.1",
-        "symfony/polyfill-php83": "^1.28"
+        "symfony/polyfill-php83": "^1.31"
     },
     "require-dev": {
         "laravel/pint": "^1.17",
         "laravel/tinker": "^2.9",
         "phpstan/phpstan": "^1.11",
-        "phpunit/phpunit": "^10.5 || ^11.0"
+        "phpunit/phpunit": "^10.5.35 || ^11.3.6"
     },
     "config": {
         "preferred-install": {
