--- a/.github/workflows/analyse.yaml
+++ b/.github/workflows/analyse.yaml
@@ -39,8 +39,11 @@ jobs:
           dependency-versions: "${{ matrix.dependencies }}"
           composer-options: "--prefer-dist --no-cache"
 
+      - name: Execute Code Style Analysis
+        run: vendor/bin/pint --test
+
       - name: Execute Static Code Analysis
-        run: vendor/bin/phpstan analyse
+        run: vendor/bin/phpstan analyse --verbose
 
   lint:
     runs-on: ${{ matrix.os }}
