--- a/composer.json
+++ b/composer.json
@@ -43,7 +43,7 @@
         "laravel/framework": "^11.26",
         "laravel/serializable-closure": "^1.3",
         "orchestra/dusk-updater": "^2.6",
-        "orchestra/testbench": "^9.4",
+        "orchestra/testbench": "dev-php84 as 9.5.999",
         "orchestra/testbench-core": "dev-php84 as 9.5.999",
         "php-webdriver/webdriver": "^1.15.1",
         "symfony/polyfill-php83": "^1.31"
